--- a/landingpage.html
+++ b/landingpage.html
@@ -27,6 +27,9 @@
 <br>
 <main>
 
+<p id="textlandingpage">Till dig som älskar delikatesser, kaffe och ett leende på läpparna</p>
+
+
 <section id="bilder">
 
     
