--- a/landingpage.html
+++ b/landingpage.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <href><site class="js"></site></href> 
+    
 </head>
 
 <body>
@@ -14,18 +16,18 @@
         <img src="kaffe.jpg" width="300" height="150">
 
 
-<section id="knapparna">
-<button>Om oss</button>
-<button>Hem</button>
-<button>Produkter</button>
-
-</section>
+        <section id="knapparna">
+            <button onclick="window.location.href='omoss.html'">Om oss</button>
+            <button onclick="window.location.href='landingpage.html'">Hem</button>
+            <button onclick="window.location.href='produkter.html'">Produkter</button>
+            <br>
+            </section>
 
 
     </header>
 
 <br>
-<main>
+<main id="mainlandingpage">
 
 <p id="textlandingpage">Till dig som älskar delikatesser, kaffe och ett leende på läpparna</p>
 
@@ -73,10 +75,8 @@
 </main>
     
 
-<section>
-    <p>test</p>
-</section>
 
-<footer id="Footern">Created by Yosef ©</footer>
+<footer class="Footern">Created by Yosef ©</footer>
+
 </body>
 </html>
