--- a/produkter.html
+++ b/produkter.html
@@ -6,6 +6,92 @@
     <title>Document</title>
 </head>
 <body>
+
+   
+
+    <header>
+        <h2 id="titelprodukt">Här kan du se och förbeställa alla våra goda produkter!</h2>
+
+        <section id="knapparna">
+            <button onclick="window.location.href='omoss.html'">Om oss</button>
+            <button onclick="window.location.href='landingpage.html'">Hem</button>
+            <button onclick="window.location.href='produkter.html'">Produkter</button>
+            <br>
+            </section>
+
+
+            <aside id="kundvagn">
+                <h3>Din kundvagn</h3>
+                <ul id="kundvagnlista"></ul>
+                <p id="totalpris">Totalt: 0 kr</p>
+            </aside>
+            
+
+
+    </header>
+
+    <main id="mainprodukter">
+<br>
+
+<img src="delikatess1.jpg" alt="Wow" class="produkterna">
+<button class="shop">Lägg till i varukorg: 49kr</button>
+
+
+
+<img src="delikatess2.jpg" alt="Nice" class="produkterna">
+<button class="shop">Lägg till i varukorg: 39kr</button>
+
+
+
+
+<img src="delikatess3.jpg" alt="Galet" class="produkterna">
+<button class="shop">Lägg till i varukorg: 19kr</button>
+
+
+
+
+<img src="delikatess4.jpg" alt="Gott" class="produkterna">
+<button class="shop">Lägg till i varukorg: 59kr</button>
+
+
+
+<img src="delikatess5.jpg" alt="Fint" class="produkterna">
+<button class="shop">Lägg till i varukorg: 99kr</button>
+
+
+
+<img src="delikatess6.jpg" alt="Sjukt" class="produkterna">
+<button class="shop">Lägg till i varukorg: 39kr</button>
+
+
+
+<img src="delikatess7.jpg" alt="Suveränt" class="produkterna">
+<button class="shop">Lägg till i varukorg: 29kr</button>
+
+
+
+
+<img src="delikatess8.jpg" alt="Bra" class="produkterna">
+<button class="shop">Lägg till i varukorg: 109kr</button>
+
+
+
+
+<img src="delikatess9.jpg" alt="Bättre" class="produkterna">
+<button class="shop">Lägg till i varukorg: 79kr</button>
+
+
+
+<img src="delikatess10.jpg" alt="Bäst" class="produkterna">
+<button class="shop">Lägg till i varukorg: 99kr</button>
+
+
+<br>
+<p id="obsss">Obs! Alla våra produkter innehåller nötter eller spår av nötter!</p>
+    </main>
     
+
+
+    <footer class="Footern">Created by Yosef ©</footer>
 </body>
 </html>
