--- a/omoss.html
+++ b/omoss.html
@@ -10,9 +10,12 @@
 
 
     <header>
+
         <h1 id="omoss">Om oss</h1>
 
-        <section id="knapparna">
+        <img src="bilder/delikatess/kaffe.jpg" class="bildennummer1">
+
+        <section class="knapparna">
             <button onclick="window.location.href='omoss.html'">Om oss</button>
             <button onclick="window.location.href='landingpage.html'">Hem</button>
             <button onclick="window.location.href='produkter.html'">Produkter</button>
