--- a/produkter.html
+++ b/produkter.html
@@ -7,16 +7,20 @@
 </head>
 <body>
 
-   
+
 
     <header>
         <h2 id="titelprodukt">Här kan du se och förbeställa alla våra goda produkter!</h2>
 
-        <section id="knapparna">
+        <img src="bilder/delikatess/kaffe.jpg" class="bildennummer1">
+
+        <section class="knapparna">
+
             <button onclick="window.location.href='omoss.html'">Om oss</button>
             <button onclick="window.location.href='landingpage.html'">Hem</button>
             <button onclick="window.location.href='produkter.html'">Produkter</button>
             <br>
+
             </section>
 
 
@@ -24,6 +28,7 @@
                 <h3>Din kundvagn</h3>
                 <ul id="kundvagnlista"></ul>
                 <p id="totalpris">Totalt: 0 kr</p>
+
             </aside>
             
 
