--- a/landingpage.html
+++ b/landingpage.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <href><site class="js"></site></href> 
-    
+    <link rel="stylesheet" href="landingpagestyle.css">
 </head>
 
 <body>
@@ -15,7 +14,7 @@
 
         <h1 id="title">Cafe Högsbo</h1>
 
-        <img src="bilder/delikatess/kaffe.jpg" class="bildennummer1">
+        <img id="bildennummer1" src="bilder/delikatess/kaffe.jpg">
 
 
         <section class="knapparna">
@@ -92,5 +91,6 @@
 
 <footer class="Footern">Created by Yosef ©</footer>
 
+<script src="site.js"></script>        
 </body>
 </html>
