är sjuk därför jag är långsam

--- a/landingpage.html
+++ b/landingpage.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="landingpagestyle.css">
+    <link rel="stylesheet" href="alla.css">
 </head>
 
 <body>
 
     <header>
+<section id="bildennummer1">
 
-        <h1 id="title">Cafe Högsbo</h1>
+    <h1 id="title">Cafe Högsbo</h1>
 
-        <img id="bildennummer1" src="bilder/delikatess/kaffe.jpg">
+</section>
+
+     <!--    <img id="bildennummer1" src="bilder/delikatess/kaffe.jpg">   -->
 
 
         <section class="knapparna">
@@ -35,7 +39,7 @@
 <p id="textlandingpage">Till dig som älskar delikatesser, kaffe och ett leende på läpparna</p>
 
 
-<section id="bilder">
+<section>
 
     
     
