--- a/landingpage.html
+++ b/landingpage.html
@@ -21,22 +21,26 @@
      <!--    <img id="bildennummer1" src="bilder/delikatess/kaffe.jpg">   -->
 
 
-        <section class="knapparna">
+            <section class="knapparna">
 
-            <button onclick="window.location.href='omoss.html'">Om oss</button>
-            <button onclick="window.location.href='landingpage.html'">Hem</button>
-            <button onclick="window.location.href='produkter.html'">Produkter</button>
-            <br>¨
+                <button onclick="window.location.href='omoss.html'">Om oss</button>
+                <button onclick="window.location.href='landingpage.html'">Hem</button>
+                <button onclick="window.location.href='produkter.html'">Produkter</button>
 
-            </section>
+                </section>
 
 
     </header>
 
-<br>
 <main id="mainlandingpage">
 
-<p id="textlandingpage">Till dig som älskar delikatesser, kaffe och ett leende på läpparna</p>
+<h2 id="textlandingpage">Till dig som älskar delikatesser, kaffe och ett leende på läpparna</p>
+
+
+<p id="mertext"> 
+    Välkommen till vårt café i Högsbo! Här hittar du ett brett utbud av läckra och välsmakande produkter, från nybakade bakverk och saftiga smörgåsar till varma och kalla drycker. Varje produkt är noggrant utvald för att ge dig en smakupplevelse utöver det vanliga. Oavsett om du är ute efter en snabb fika eller en lång stund av avkoppling, har vi något för alla smaker. Kom in och låt oss förgylla din dag med våra härliga godsaker!
+
+</p>
 
 
 <section>
