--- a/omoss.html
+++ b/omoss.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="alla.css">
+
 </head>
 
 <body>
@@ -50,23 +52,23 @@
         <ul id="personal">
 
             <li>VD: Sara Haglund</li> 
-            <img src="vd1.png" alt="En bild på Sara Haglund" class="personalbilder">
+            <img src="bilder/personal/vd1.png" alt="En bild på Sara Haglund" class="personalbilder">
             <br>
 
             <li>Servitris: Maja Eriksson</li>
-            <img src="servitris1.png" alt="En bild på Maja Eriksson" class="personalbilder">
+            <img src="bilder/personal/servitris1.png" alt="En bild på Maja Eriksson" class="personalbilder">
             <br>
 
             <li>Servitris: Julia Gustavsson</li>
-            <img src="servitris2.png" alt="En bild på Julia Gustavsson" class="personalbilder">
+            <img src="bilder/personal/servitris2.png" alt="En bild på Julia Gustavsson" class="personalbilder">
             <br>
 
             <li>Servitör: Robert Andersson</li>
-            <img src="servitör2.jpg" alt="En bild på Robert Andersson" class="personalbilder">
+            <img src="bilder/personal/Servitör1.jpg" alt="En bild på Robert Andersson" class="personalbilder">
             <br>
 
             <li>Servitör: Patrik Mortensen</li>
-            <img src="Servitör1.jpg" alt="En bild på Patrik Mortensen" class="personalbilder">
+            <img src="bilder/personal/servitör2.jpg" alt="En bild på Patrik Mortensen" class="personalbilder">
         </ul>
     </section>
     
