--- a/produkter.html
+++ b/produkter.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="alla.css">
+
 </head>
 <body>
 
@@ -38,24 +40,24 @@
     <main id="mainprodukter">
 <br>
 
-<img src="delikatess1.jpg" alt="Wow" class="produkterna">
+<img src="bilder/delikatess/delikatess1.jpg" alt="Wow" class="produkterna">
 <button class="shop">Lägg till i varukorg: 49kr</button>
 
 
 
-<img src="delikatess2.jpg" alt="Nice" class="produkterna">
+<img src="bilder/delikatess/delikatess2.jpg" alt="Nice" class="produkterna">
 <button class="shop">Lägg till i varukorg: 39kr</button>
 
 
 
 
-<img src="delikatess3.jpg" alt="Galet" class="produkterna">
+<img src="bilder/delikatess/delikatess3.jpg" alt="Galet" class="produkterna">
 <button class="shop">Lägg till i varukorg: 19kr</button>
 
 
 
 
-<img src="delikatess4.jpg" alt="Gott" class="produkterna">
+<img src="bilder/delikatess/delikatess4.jpg" alt="Gott" class="produkterna">
 <button class="shop">Lägg till i varukorg: 59kr</button>
 
 
@@ -65,29 +67,29 @@
 
 
 
-<img src="delikatess6.jpg" alt="Sjukt" class="produkterna">
+<img src="bilder/delikatess/delikatess6.jpg" alt="Sjukt" class="produkterna">
 <button class="shop">Lägg till i varukorg: 39kr</button>
 
 
 
-<img src="delikatess7.jpg" alt="Suveränt" class="produkterna">
+<img src="bilder/delikatess/delikatess7.jpg" alt="Suveränt" class="produkterna">
 <button class="shop">Lägg till i varukorg: 29kr</button>
 
 
 
 
-<img src="delikatess8.jpg" alt="Bra" class="produkterna">
+<img src="bilder/delikatess/delikatess8.jpg" alt="Bra" class="produkterna">
 <button class="shop">Lägg till i varukorg: 109kr</button>
 
 
 
 
-<img src="delikatess9.jpg" alt="Bättre" class="produkterna">
+<img src="bilder/delikatess/delikatess9.jpg" alt="Bättre" class="produkterna">
 <button class="shop">Lägg till i varukorg: 79kr</button>
 
 
 
-<img src="delikatess10.jpg" alt="Bäst" class="produkterna">
+<img src="bilder/delikatess/delikatess10.jpg" alt="Bäst" class="produkterna">
 <button class="shop">Lägg till i varukorg: 99kr</button>
 
 
