--- a/omoss.html
+++ b/omoss.html
@@ -34,7 +34,7 @@
 
 
 
-    <p id="omossp">Välkommen till vårt mysiga, lokala café! Vi är ett litet team på fyra serveringspersonal och en engagerad VD som tillsammans skapar en varm och familjär atmosfär. Kom förbi och njut av en kopp kaffe hos oss!</p>
+    <p id="omossp"> Vi är ett litet team på fyra serveringspersonal och en engagerad VD som tillsammans skapar en varm och familjär atmosfär. Kom förbi och njut av en kopp kaffe hos oss!</p>
 
 
     
@@ -52,23 +52,23 @@
         <ul id="personal">
 
             <li>VD: Sara Haglund</li> 
-            <img src="bilder/personal/vd1.png" alt="En bild på Sara Haglund" class="personalbilder">
+            <img src="bilder/personal/nyaVD2.0.png" alt="En bild på Sara Haglund" class="personalbilder">
             <br>
 
             <li>Servitris: Maja Eriksson</li>
-            <img src="bilder/personal/servitris1.png" alt="En bild på Maja Eriksson" class="personalbilder">
+            <img src="bilder/personal/servitris1men2.0.png" alt="En bild på Maja Eriksson" class="personalbilder">
             <br>
 
             <li>Servitris: Julia Gustavsson</li>
-            <img src="bilder/personal/servitris2.png" alt="En bild på Julia Gustavsson" class="personalbilder">
+            <img src="bilder/personal/servitris2men2.0.png" alt="En bild på Julia Gustavsson" class="personalbilder">
             <br>
 
             <li>Servitör: Robert Andersson</li>
-            <img src="bilder/personal/Servitör1.jpg" alt="En bild på Robert Andersson" class="personalbilder">
+            <img src="bilder/personal/nyaservitris2.0.png" alt="En bild på Robert Andersson" class="personalbilder">
             <br>
 
             <li>Servitör: Patrik Mortensen</li>
-            <img src="bilder/personal/servitör2.jpg" alt="En bild på Patrik Mortensen" class="personalbilder">
+            <img src="bilder/personal/nyaservitris2men2.0.png" alt="En bild på Patrik Mortensen" class="personalbilder">
         </ul>
     </section>
     
