--- a/omoss.html
+++ b/omoss.html
@@ -113,7 +113,7 @@
  
 
 
-<footer class="Footern">Created by Yosef ©</footer>
+<footer class="Footern">Created by Potatis2.0 ©</footer>
 
 </body>
 </html>
