--- a/produkter.html
+++ b/produkter.html
@@ -74,9 +74,11 @@
         <p id="obsss">Obs! Alla våra produkter innehåller nötter eller spår av nötter!</p>
     </main>
 
-    <footer class="Footern">Created by Yosef ©</footer>
 
 
-    <script src="site.js"></script>        
+    <footer class="Footern">Created by Potatis2.0 ©</footer>
+
+
+    <script src="site.js" defer></script>        
 </body>
 </html>
