--- a/landingpage.html
+++ b/landingpage.html
@@ -103,7 +103,7 @@
     
 
 
-<footer class="Footern">Created by Yosef ©</footer>
+<footer class="Footern">Created by Potatis2.0 ©</footer>
 
 <script src="site.js"></script>        
 </body>
