--- a/produkter.html
+++ b/produkter.html
@@ -27,47 +27,47 @@
         </aside>
     </header>
 
-    <main id="mainprodukter">
+    <main id="mainprodukter">   
         <div class="produkt-container">
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess1.jpg" alt="Wow" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 49kr</button>
+                <button class="shop" data-title="Kladdkaka" data-price="49">Lägg till i varukorg: 49kr</button>
             </div>
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess2.jpg" alt="Nice" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 39kr</button>
+                <button class="shop" data-title="Sockerkaka" data-price="39">Lägg till i varukorg: 39kr</button>
             </div>
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess3.jpg" alt="Galet" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 19kr</button>
+                <button class="shop" data-title="Chokladkaka" data-price="19">Lägg till i varukorg: 19kr</button>
             </div>
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess4.jpg" alt="Gott" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 59kr</button>
+                <button class="shop" data-title="Vaniljkaka" data-price="59">Lägg till i varukorg: 59kr</button>
             </div>
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess5.jpg" alt="Fint" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 99kr</button>
+                <button class="shop" data-title="Kladdmuffin" data-price="99">Lägg till i varukorg: 99kr</button>
             </div>
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess6.jpg" alt="Sjukt" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 39kr</button>
+                <button class="shop" data-title="Sockermuffin" data-price="39">Lägg till i varukorg: 39kr</button>
             </div>
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess7.jpg" alt="Suveränt" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 29kr</button>
+                <button class="shop" data-title="Chokladmuffin" data-price="29">Lägg till i varukorg: 29kr</button>
             </div>
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess8.jpg" alt="Bra" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 109kr</button>
+                <button class="shop" data-title="Vaniljmuffin" data-price="109">Lägg till i varukorg: 109kr</button>
             </div>
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess9.jpg" alt="Bättre" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 79kr</button>
+                <button class="shop" data-title="Gordon Ramsey special" data-price="79">Lägg till i varukorg: 79kr</button>
             </div>
             <div class="produkt">
                 <img src="bilder/delikatess/delikatess10.jpg" alt="Bäst" class="produkterna">
-                <button class="shop">Lägg till i varukorg: 99kr</button>
+                <button class="shop" data-title="PotatisDelux" data-price="99">Lägg till i varukorg: 99kr</button>
             </div>
         </div>
         <br>
